bug: fix loading screen not showing
On pages with fetch logic, the loading state might be false before the
product/products state are updated, causing a blank screen instead of
the loading screen.

Update loading logic to account for both the loading and
product/products state to display loading screen correctly.

--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -1,5 +1,5 @@
 .cartSection {
-  padding: 8rem 2.5rem;
+  padding: 4.4rem 2.5rem;
 }
 
 .cartHeading {
